# aptakhin.github.io

./: .gitattributes  404.html  CNAME  atom.xml  cv.html  feed.atom  index.html  index.xml  robots.txt  sitemap.xml
_site/blog/: feed.atom  index.html
_site/sys/: index.html
_site/tags/: D.html
blog/: _config.yml  feed.atom  index.html
blog/_layouts/: default.html  post.html
blog/_posts/: 2014-06-20-simplification-vs-accuracy.md
blog/_site/: feed.atom
blog/archives/: index.html
categories/: index.html  index.xml
categories/codereview/: index.html  (+1 more)
contacts/: index.html
css/: main.css
cv/: index.html
cv-ru/: index.html
cv-tech/: index.html
docs/: index.html
files/: aptakhin-cv.html
impressum/: index.html
posts/: index.html  index.xml
projects/: index.html
published/: index.html
resume-lead/: index.html
resume-tech/: index.html
stylesheets/: screen.css
sys/: .hg_archival.txt  .hgtags  obraz.py
tags/: O.html  S.html  index.html  index.xml
talks/: .gitattributes
talks/2023-Sustainable-Python-Performance/: calls.py  index.html  pyproject.toml
talks/2023-Sustainable-Python-Performance/load/: parsing-document-in-ram-intensive-application.py  ram_intensive_program-2.py  ram_intensive_program.py
talks/2023-Sustainable-Python-Performance/pdf/: .gitignore  package.json
talks/2023-Sustainable-Python-Performance/pdf/tests/: pdfize.spec.ts
talks/2023-Sustainable-Python-Performance/shell/: pdf.sh  server.sh
unifex/: 404.html  index.html  objects.inv  sitemap.xml
xtra/: 404.html  index.html  objects.inv  sitemap.xml
(+109 files in other folders)
